RESOLVED FIXED 259073
REGRESSION(265614@main): Leads to a crash if there is are multiple hoisted functions by the same name <rdar://112017932>
https://bugs.webkit.org/show_bug.cgi?id=259073
Summary REGRESSION(265614@main): Leads to a crash if there is are multiple hoisted fu...
WebKit Commit Bot
Reported 2023-07-10 13:53:32 PDT
https://commits.webkit.org/265614@main introduced a regression: Leads to a crash if there is are multiple hoisted functions by the same name <rdar://112017932> This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 265614@main (69.11 KB, patch)
2023-07-10 13:53 PDT, WebKit Commit Bot
no flags
WebKit Commit Bot
Comment 1 2023-07-10 13:53:36 PDT
Created attachment 467009 [details] REVERT of 265614@main Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
Alexey Shvayka
Comment 2 2023-07-10 13:58:27 PDT
*** Bug 259070 has been marked as a duplicate of this bug. ***
Mark Lam
Comment 3 2023-07-10 13:59:00 PDT
EWS
Comment 4 2023-07-10 14:02:22 PDT
Committed 265915@main (67ceec548448): <https://commits.webkit.org/265915@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467009 [details].
Note You need to log in before you can comment on or make changes to this bug.