Cherry-pick 67ceec548448. rdar://problem/112017932

Unreviewed, reverting 265614@main.
    https://bugs.webkit.org/show_bug.cgi?id=259073

    Leads to a crash if there is are multiple hoisted functions by the same name <rdar://112017932>

    Reverted changeset:

    "[JSC] Align duplicate declaration checks in EvalDeclarationInstantiation with the spec"
    https://bugs.webkit.org/show_bug.cgi?id=167837
    https://commits.webkit.org/265614@main

    Canonical link: https://commits.webkit.org/265915@main

Identifier: 265870.97@safari-7616-branch